--- a/templates/index.html
+++ b/templates/index.html
@@ -173,8 +173,13 @@
                 <div class="collapse" id="sidebarLayouts">
                   <ul class="nav nav-collapse">
                     <li>
-                      <a href="{% url 'centrodecusto_manage' %}">
-                        <span class="sub-item">Listar Centros</span>
+                      <a href="{% url 'centrodecustogestor_create' %}">
+                        <span class="sub-item">Listar Centros de Custo Gestor</span>
+                      </a>
+                    </li> 
+                    <li>
+                      <a href="{% url 'centrodecustogestor_create' %}">
+                        <span class="sub-item">Ad Centros</span>
                       </a>
                     </li>                    
                   </ul>
